tests/snapshots/run_wpt_conformance__coreml_sign_int32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sign.https.any.js",
    "sign int32 2D tensor",
    "coreml",
    "PASS",
)
